Doc Review Form: fix star margins, form width, logo placement, unnecessary whitespace on submission, phone number

--- a/css/home.scss
+++ b/css/home.scss
@@ -448,7 +448,7 @@ body.beta .iu .img {
   box-sizing: border-box;
 }
 .full-width-form img.logo {
-  width: 40%;
+  width: 30%;
   margin: 0 0 10px 0;
 }
 .full-width-form div.logo {
@@ -466,7 +466,7 @@ body.beta .iu .img {
   -webkit-user-select: none;
   border: none;
   border-top: thin solid #dedede;
-  width: calc(100% + 100px);
+  width: calc(100% + 110px);
   margin-left: -50px;
   box-sizing: border-box;
   padding-left: 50px;
@@ -1236,6 +1236,8 @@ footer {
     }
 
     padding-bottom: 10px;
+    margin-left: -3px;
+    margin-top: -2px;
 
 }
 
